[package]
name = "uprotocol_zenoh_rust"
version = "0.1.0"
edition = "2021"

[lints.clippy]
all = "deny"
pedantic = "deny"
#cargo = "deny"
#restriction = "deny"
#nursery = "deny"

[dependencies]
# Official one
uprotocol-sdk = { git = "https://github.com/eclipse-uprotocol/uprotocol-rust.git", branch = "uprotocol_1.5" }
# PR
#uprotocol-sdk = { git = "https://github.com/SoftwareDefinedVehicle/uprotocol-sdk-rust_fork.git", branch = "main" }
# Debug
#uprotocol-sdk = { path = "../uprotocol-sdk-rust" }
prost = "0.12"
prost-types = "0.12"
cloudevents-sdk = { version = "0.7.0" }
zenoh = "0.10.0-rc"
async-trait = "0.1"
async-std = "1.12.0"
anyhow = "1.0.75"
